--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 
 <body>
 
-  <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
@@ -34,12 +33,12 @@
           <li><a class="nav-link scrollto" href="#contacts">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
+      </nav>
 
     </div>
-  </header><!-- End Header -->
+  </header>
 
-  <!-- ======= Hero Section ======= -->
+
   <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/rasm.JPG)">
     <div class="overlay-itro"></div>
     <div class="hero-content display-table">
@@ -50,11 +49,11 @@
         </div>
       </div>
     </div>
-  </div><!-- End Hero Section -->
+  </div>
 
   <main id="main">
 
-    <!-- ======= About Section ======= -->
+
     <section id="about" class="about-mf sect-pt4 route">
       <div class="container">
         <div class="row">
@@ -123,9 +122,9 @@
           </div>
         </div>
       </div>
-    </section><!-- End About Section -->
+    </section>
 
-    <!-- ======= Counter Section ======= -->
+ 
     <div class="section-counter paralax-mf bg-image" style="background-image: url(assets/img/counters-bg.jpg)">
       <div class="overlay-mf"></div>
       <div class="container position-relative">
@@ -176,9 +175,8 @@
           </div>
         </div>
       </div>
-    </div><!-- End Counter Section -->
+    </div>
 
-    <!-- ======= Portfolio Section ======= -->
     <section id="work" class="portfolio-mf sect-pt4 route">
       <div class="container">
         <div class="row">
@@ -267,9 +265,9 @@
 
         </div>
       </div>
-    </section><!-- End Portfolio Section -->
+    </section>
 
-    <!-- ======= Contact Section ======= -->
+
     <section id="contacts" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(assets/img/overlay-bg.jpg)">
       <div class="overlay-mf"></div>
       <div class="container">
@@ -347,14 +345,14 @@
           </div>
         </div>
       </div>
-    </section><!-- End Contact Section -->
+    </section>
 
-  </main><!-- End #main -->
+  </main>
 
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Vendor JS Files -->
+
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
@@ -362,7 +360,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
-  <!-- Template Main JS File -->
+
   <script src="assets/js/main.js"></script>
 
 </body>
